# FPGA_MNIST

./: EggNet.json  README.md
python/: gen_mif.py  requirements-min.txt
python/EggNet/: setup.py
python/EggNet/EggNet/: Layer.py  __init__.py  quant.py
python/EggNet/EggNet/Generator/: __init__.py  gen_egg_box.py  gen_mif.py
python/EggNet/EggNet/VunitExtension/: __init__.py  net_sim.py  numpy2csv2vhdl.py  numpy2json2vhdl.py  runner.py  simulator.py  vunit_helper.py
python/EggNetExtension/EggNetExtension/: EggNetExtension.py  NNExtension.h  NNExtension.i  cconv.c  chelper.h  crelu.c
vivado/NN_IP/EggNet_1.0/: .gitignore  Dockerfile  HOW-TO-DOCKER.md  numpy2json2vhdl.py  run.py  setup_vhdl_ls.py  vhdl_ls.toml  vunit_helper.py
vivado/NN_IP/EggNet_1.0/.devcontainer/: devcontainer.json
vivado/NN_IP/EggNet_1.0/concepts/: conv_arch.py  nn_alu.vhd  nn_conv_kernel.vhd  nnpkg.vhd  run.py  tb_nn_alu.vhd  tb_nn_conv_kernel.vhd  tb_nn_conv_kernel_vcd_conf.txt
vivado/NN_IP/EggNet_1.0/docker/: Dockerfile  HOW-TO-DOCKER.md  docker-compose.yml
vivado/NN_IP/EggNet_1.0/sim/ConvChannel/: tb_conv_channel.vhd  testbench.py
vivado/NN_IP/EggNet_1.0/sim/PoolingLayer/: testbench.py
vivado/NN_IP/EggNet_1.0/src/3x3_Kernel_log2/: 3x3_kernel_log2.vhd  Shiftregister_3x3.vhd  fullp_adder_2th_comp.vhd  kernel_adder.vhd  log2_multiplier.vhd  quantized_adder.vhd
vivado/NN_IP/EggNet_1.0/src/Common/: csv_numpy_pkg.vhd  egg_box.vhd  json_numpy_pkg.vhd  kernel_pkg.vhd
vivado/NN_IP/EggNet_1.0/src/Conv2d_log2/: conv2d.vhd  conv_channel.vhd
vivado/NN_IP/EggNet_1.0/src/ConvShift/: 3x3_shift_kernel.vhd  ShiftKernel2d.vhd
vivado/NN_IP/EggNet_1.0/src/Conv_Channel/: conv2d.vhd  conv_channel.vhd
vivado/NN_IP/EggNet_1.0/vunit/: run.py  run_traditional.py
vivado/Software/: Dockerfile
vivado/Software/.devcontainer/: devcontainer.json
vivado/Software/EggDriver/: CMakeLists.txt
vivado/Software/EggDriver/lib/lsuio/: CMakeLists.txt
vivado/Software/EggDriver/pysetup/: info.py
vivado/Software/EggDriver/src/: eggnet.i
(+16 files in other folders)
